flux/apps/uptimekuma/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: uptimekuma
  namespace: uptimekuma
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: uptimekuma
  template:
    metadata:
      labels:
        app.kubernetes.io/name: uptimekuma
    spec:
      securityContext:
        readOnlyRootFilesystem: false
        # runAsUser: 2000
        # runAsGroup: 2000
        # fsGroup: 2000
        # fsGroupChangePolicy: "Always"
      containers:
        - name: uptimekuma
          image: docker.io/louislam/uptime-kuma:2.5.5-slim
          imagePullPolicy: Always
          ports:
            - name: uptimekuma
              containerPort: 3001
              protocol: TCP
          volumeMounts:
            - mountPath: /app/data
              name: uptimekuma-config
          resources:
            requests:
              memory: "500M"
              cpu: "250m"
            limits:
              memory: "500M"
              cpu: "250m"
          readinessProbe:
            httpGet:
              path: /
              port: uptimekuma
              scheme: HTTP
            initialDelaySeconds: 10
            timeoutSeconds: 5
          livenessProbe:
            tcpSocket:
              port: uptimekuma
            failureThreshold: 1
            periodSeconds: 10
          startupProbe:
            tcpSocket:
              port: uptimekuma
            failureThreshold: 30
            periodSeconds: 10
      dnsConfig:
        options:
          - name: ndots
            value: "1"

      volumes:
        - name: uptimekuma-config
          persistentVolumeClaim:
            claimName: uptimekuma-config
