flux/apps/uptimekuma/ingressroute.yml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: uptimekuma-web
  namespace: uptimekuma
  annotations:
    switchboard.borchero.com/ignore: "all"
    external-dns.alpha.kubernetes.io/target: traefik.tartarus.us
    kubernetes.io/ingress.class: traefik
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`uptimekuma.tartarus.us`)
      kind: Rule
      services:
        - name: uptimekuma
          kind: Service
          port: 3001
      middlewares:
        - name: https-redirect-middleware
          namespace: uptimekuma

  tls:
    secretName: letsencrypt-wildcard-cert-tartarus.us-prod
